--- a/cant/index.html
+++ b/cant/index.html
@@ -98,7 +98,7 @@
                   alt="Experience icon"
                   class="icon"
                 />
-                <h3>Experience</h3>
+                <h3>Experience</h3> <br />
                 <p>Beginner <br />ComSci Student</p>
               </div>
               <div class="details-container">
@@ -107,7 +107,7 @@
                   alt="Education icon"
                   class="icon"
                 />
-                <h3>Education</h3>
+                <h3>Education</h3> <br />
                 <p>Sta. Clara Parish School<br />Juan Sumulong Elementary School</p>
               </div>
             </div>
