--- a/cant/index.html
+++ b/cant/index.html
@@ -215,7 +215,7 @@
               alt="Email icon"
               class="icon contact-icon email-icon"
             />
-            <p><a href="mailto:examplemail@gmail.com">Example@gmail.com</a></p>
+            <p><a href="mailto:examplemail@gmail.com">realaccount@gmail.com</a></p>
           </div>
         </div>
       </section>
