--- a/comments/index.html
+++ b/comments/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     <div class="comment-container">
         <h2>Leave a Comment</h2>
         <form id="comment-form">
